--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,12 @@
   		<artifactId>mariadb-java-client</artifactId>
   		<version>2.6.2</version>
   	</dependency>
+  	<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13</version>
+</dependency>
+  	
   </dependencies>
 </project>
